--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@nestjs/sequelize": "8.0.0",
     "@nestjs/swagger": "4.8.2",
     "@nestjs/terminus": "7.0.1",
+    "@nrwl/next": "13.10.5",
     "@rehooks/component-size": "1.0.3",
     "@sentry/browser": "6.9.0",
     "@sentry/integrations": "6.9.0",
@@ -141,7 +142,7 @@
     "configcat-js": "5.4.0",
     "configcat-node": "6.7.0",
     "contentful": "7.14.6",
-    "contentful-management": "6.0.5",
+    "contentful-management": "10.12.0",
     "contentful-ui-extensions-sdk": "3.32.0",
     "cookie-parser": "1.4.5",
     "copy-to-clipboard": "3.3.1",
@@ -248,6 +249,7 @@
     "recharts": "2.0.9",
     "redoc": "2.0.0-rc.48",
     "reflect-metadata": "0.1.13",
+    "regenerator-runtime": "0.13.7",
     "remark-parse": "9.0.0",
     "rosetta": "1.0.0",
     "rxjs": "^7.0.0",
